Fix amount of tickets issue

--- a/views/expedia.ejs
+++ b/views/expedia.ejs
@@ -20,7 +20,7 @@
       <%- include ('expediaImportantInformation'); %>
 
       <!-- Flightdata Header -->
-      <%- include ('expediaFlightDataHeader', {flight, month}); %>
+      <%- include ('expediaFlightDataHeader', {flight, month, passengers}); %>
 
       <div style="display: flex;">
         <div style="margin-right: 10px; width: 1000px;">
