--- a/views/expedia.ejs
+++ b/views/expedia.ejs
@@ -5,7 +5,49 @@
     <meta charset="utf-8" />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <style>
+    /* This css is for PDF Template */
+
+    @page {
+      margin: 30px;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    p,
+    li {
+      font-size: 0.8rem;
+      margin-bottom: 5px;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      box-sizing: border-box;
+    }
+
+    .root {
+      width: 21cm;
+      padding: 0 50px;
+    }
+
+    .frame {
+      border: 1px solid lightgray;
+      padding: 10px;
+    }
+
+    .logo {
+      width: 200px;
+    }
+
+    .flex-between {
+      display: flex;
+      justify-content: space-between;
+    }
+    </style>
   </head>
 
   <body>
